--- a/src/scss/main/_Ad.scss
+++ b/src/scss/main/_Ad.scss
@@ -1,16 +1,16 @@
 #ad {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: #fce4ec;
   position: relative;
-  padding: 5vh 5vw;
+  padding: 10vh 5vw;
   h1 {
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
-    font: 30px/1 'noto sans';
-    font-weight: 100;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
     color: #222;
   }
   .video {
