--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -9,9 +9,9 @@
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
-    font: 30px/1 'noto sans';
-    font-weight: 100;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
     color: #222;
   }
 
@@ -67,6 +67,13 @@
         padding: 5px 10px;
         border-bottom: 1px solid #222;
       }
+      h2,
+      h3,
+      h4 {
+        transform: translateX(-50px);
+        opacity: 0;
+        transition: 0.5s;
+      }
     }
     > .pic {
       width: 50%;
@@ -76,6 +83,24 @@
         height: 300px;
         object-fit: cover;
         border-radius: 50%;
+      }
+    }
+  }
+
+  &.on {
+    article {
+      > .member_intro {
+        h2,
+        h3,
+        h4 {
+          transform: translateX(0);
+          opacity: 1;
+        }
+        @for $i from 0 to 3 {
+          &:nth-of-child(#{$i + 1}) {
+            transition-delay: 0.2s * $i;
+          }
+        }
       }
     }
   }
