--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -1,16 +1,16 @@
 #pics {
   width: 100%;
-  min-height: 80vh;
+  min-height: 100vh;
   background: #f5f4f3;
   position: relative;
-  padding: 10vh 10vw;
+  padding: 10vh 10vw 15vh;
   h1 {
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
-    font: 30px/1 'noto sans';
-    font-weight: 100;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
     color: #222;
   }
   .preview {
