--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -8,9 +8,9 @@
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
-    font: 30px/1 'noto sans';
-    font-weight: 100;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
     color: #222;
   }
   .inner {
