--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -3,14 +3,14 @@
   min-height: 80vh;
   background: #f5f4f3;
   position: relative;
-  padding: 5vh 2vw;
+  padding: 10vh 2vw;
   h1 {
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
-    font: 30px/1 'noto sans';
-    font-weight: 100;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
     color: #222;
   }
   .swiper {
