--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,6 +1,6 @@
 #visual {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   position: relative;
   // overflow: hidden;
 
@@ -29,13 +29,13 @@
 
   .prev {
     position: absolute;
-    top: 50%;
-    left: 3vw;
-    transform: translateY(-50%);
-    width: 4vw;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-500%);
+    width: 2vw;
     height: 3vh;
-    font: 20px/1 'noto sans';
-    font-weight: 100;
+    font: 16px/1 'noto sans';
+    font-weight: 400;
     color: #fff;
     background: transparent;
     border: none;
@@ -45,13 +45,13 @@
 
   .next {
     position: absolute;
-    top: 50%;
-    right: 3vw;
-    transform: translateY(-50%);
-    width: 4vw;
+    bottom: 50px;
+    right: 50%;
+    transform: translateX(500%);
+    width: 2vw;
     height: 3vh;
-    font: 20px/1 'noto sans';
-    font-weight: 100;
+    font: 16px/1 'noto sans';
+    font-weight: 400;
     color: #fff;
     background: transparent;
     border: none;
