--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,4 +1,5 @@
 .Gallery {
+  position: relative;
   figure {
     background: lightcyan;
   }
@@ -7,6 +8,35 @@
     top: 10%;
     left: 50%;
     transform: translateX(-50%);
+  }
+  .typo {
+    position: absolute;
+    top: 2%;
+    right: 20%;
+    font: 60px/1 'Cormorant SC';
+    font-weight: 300;
+    color: #b0bec5;
+    &::before {
+      content: 'FOR';
+      display: block;
+      position: absolute;
+      color: #222;
+      top: -100%;
+      right: -20%;
+      font: 60px/1 'Cormorant SC';
+      font-weight: 300;
+      color: #b0bec5;
+    }
+    &::after {
+      content: 'MOMENTS';
+      display: block;
+      position: absolute;
+      color: #222;
+      bottom: -100%;
+      right: -100%;
+      font: 60px/1 'Cormorant SC';
+      color: #b0bec5;
+    }
   }
   .list {
     width: 100%;
